Document wxListBox and wxChoice as inheriting from wxItemContainer.

Due to an apparent Doxygen bug, methods inherited from wxItemContainer via
wxControlWithItems didn't appear in the documentation, so work around this by
using wxItemContainer as a direct base class.

Closes #14882.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73281 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775