interface/wx/choice.h
@@ -30,7 +30,8 @@
 
     @see wxListBox, wxComboBox, wxCommandEvent
 */
-class wxChoice : public wxControlWithItems
+class wxChoice : public wxControl,
+                 public wxItemContainer
 {
 public:
     /**
